[package]
name = "typesofastjustsu"
version = "0.0.1"
edition = "2021"
author = "Gama Sibusiso Vincent, mfanakagama@gmail.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
raylib = "3.7.0"
winit = "0.25.0"
async-std = { version = "1.9", features = ["attributes"] }
